--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_FooterPartialArea.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_FooterPartialArea.cshtml
@@ -14,11 +14,10 @@
         <hr class="footer-hr">
     </div>
     <div class="container custom-max-width m-auto">
-        <div class="row">
-            <div class="middle-footer">
-                <aside id="column-left1" class="col-sm-4 col-xs-12 follow-us-footer">
+            <div class="row middle-footer">
+                <aside id="column-left1" class="col-md-4 col-12 follow-us-footer">
                     <div>
-                        <h5 class="d-sm-none d-lg-none d-md-none">
+                        <h5 class="d-lg-none d-md-none">
                             <span>About Us</span>
                             <button type="button" class="btn btn-primary toggle collapsed" data-toggle="collapse" data-target="#about"></button>
                         </h5>
@@ -31,9 +30,9 @@
                         </div>
                     </div>
                 </aside>
-                <div class="col-sm-5 col-xs-12">
+                <div class="col-md-5 col-12">
                     <div class="row">
-                        <div class="col-sm-6 col-xs-12 fborder">
+                        <div class="col-md-6 col-12 fborder">
                             <h5>
                                 Information
                                 <button type="button" class="btn btn-primary toggle collapsed" data-toggle="collapse" data-target="#info"></button>
@@ -47,7 +46,7 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="col-sm-6 col-xs-12 fborder">
+                        <div class="col-md-6 col-12 fborder">
                             <h5>
                                 My Account
                                 <button type="button" class="btn btn-primary toggle collapsed" data-toggle="collapse" data-target="#account"></button>
@@ -62,7 +61,7 @@
                         </div>
                     </div>
                 </div>
-                <aside id="column-right1" class="col-sm-3 col-xs-12 fborder">
+                <aside id="column-right1" class="col-md-3 col-12 fborder">
                     <div>
                         <h5>
                             <span>Contact us</span>
@@ -86,7 +85,6 @@
                     </div>
                 </aside>
             </div>
-        </div>
     </div>
     <div class="ui-footer text-center">
         <div class="container">
