--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_HorizontalNavbarPartial.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_HorizontalNavbarPartial.cshtml
@@ -3,16 +3,16 @@
 
 
 
-<div class="d-md-none d-lg-none d-sm-none horizontal-menu">
-    <div class="row">
-        <div class="col-xs-7">
+<div class="d-lg-none horizontal-menu">
+    <div class="row no-f-wrap">
+        <div class="col-sm-7">
             <div id="logo-mobile" class="ui-logo">
                 <a href="@Url.Action("Index","Home")">
                     <img src="/Areas/Shop/Content/app/img/logo.png" title="SmartShop Multistore" alt="SmartShop Multistore" class="img-responsive" />
                 </a>
             </div>
         </div>
-        <div class="col-xs-5 ">
+        <div class="col-sm-5 ">
             <div id="top-links-menu" class="text-right top-menu-links col-sm-12 col-lg-2">
                 <ul class="list-inline">
                     <li class="dropdown user_menu">
