--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_TopHeaderPartial.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_TopHeaderPartial.cshtml
@@ -4,8 +4,8 @@
 
 <div id="top-header" class="sticky-header">
     <header class="custom-header-container">
-        <div class="container custom-container">
-            <div class="row header-row custom-max-width m-auto">
+        <div class="custom-container">
+            <div class="header-row custom-max-width m-auto pl-10 pr-10">
                 <div class="head-logo">
                     <div id="logo" class="ui-logo">
                         <a href="@Url.Action("Index","Home")">
