--- a/WarehouseEcommerce/Areas/Shop/Views/Home/Index.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
     <div id="common-home" class="container-fluid custom-max-width">
         <div class="row">
-            <div id="content" class="col-md-12">
+            <div id="content" class="col-lg-12">
                 @Html.Partial("_DeliveryInfoPartial")
                 @Html.Partial("_SliderPartial")
                 @Html.Action("_TopProductPartial")
