--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_Layout.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_Layout.cshtml
@@ -94,7 +94,7 @@
 
             </div>
         }*@
-    <div class="container">
+    <div class="container-fluid pl-0 pr-0">
 
         @RenderBody()
 
