--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_OnSalePartial.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_OnSalePartial.cshtml
@@ -23,11 +23,11 @@
                         <div class="product-layout toppro" id="onsale-first-row">
                             <div class="product-thumb1 transition">
                                 <div class="">
-                                    <div class="col-xs-12 manage-width topprom ">
+                                    <div class="col-12 manage-width topprom ">
                                         <div class="image ">
-                                            <a href="@Url.Action("ProductDetails","Products", new { sku= product[i].SKUCode })"><img src="@(!string.IsNullOrEmpty(product[i].DefaultImage)? ViewBag.BaseFilePath + product[i].DefaultImage : ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.gif")" alt="@product[i].Name" title="@product[i].Name" class="img-responsive center-block" /></a>
+                                            <a href="@Url.Action("ProductDetails","Products", new { sku= product[i].SKUCode })"><img src="@(!string.IsNullOrEmpty(product[i].DefaultImage)? ViewBag.BaseFilePath + product[i].DefaultImage : ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.gif")" alt="@product[i].Name" title="@product[i].Name" class="img-fluid center-block" /></a>
                                             <!-- Smartshop Images Start -->
-                                            <a href="@Url.Action("ProductDetails","Products", new { sku= product[i].SKUCode })"><img src="@(!string.IsNullOrEmpty(product[i].HoverImage)? ViewBag.BaseFilePath + product[i].HoverImage :ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.gif")" alt="@product[i].Name" title="@product[i].Name" class="img-responsive second-img" /></a>
+                                            <a href="@Url.Action("ProductDetails","Products", new { sku= product[i].SKUCode })"><img src="@(!string.IsNullOrEmpty(product[i].HoverImage)? ViewBag.BaseFilePath + product[i].HoverImage :ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.gif")" alt="@product[i].Name" title="@product[i].Name" class="img-fluid second-img" /></a>
                                             <!-- Smartshop Images End -->
                                             <div class="topbutton">
                                                 <button type="button" data-toggle="tooltip" title="Add to Wish List">
@@ -85,11 +85,11 @@
                         <div class="product-layout toppro second-row">
                             <div class="product-thumb1 transition">
                                 <div class="">
-                                    <div class="col-xs-12 manage-width topprom ">
+                                    <div class="col-12 manage-width topprom ">
                                         <div class="image">
-                                            <a href="@Url.Action("ProductDetails","Products", new { sku= product[i+1].SKUCode })"><img src="@(!string.IsNullOrEmpty(product[i].DefaultImage)?ViewBag.BaseFilePath +product[i].DefaultImage :ViewBag.BaseFilePath +"/UploadedFiles/Products/no_image.gif")" alt="@product[i+1].Name" title="@product[i+1].Name" class="img-responsive center-block first-img" /></a>
+                                            <a href="@Url.Action("ProductDetails","Products", new { sku= product[i+1].SKUCode })"><img src="@(!string.IsNullOrEmpty(product[i].DefaultImage)?ViewBag.BaseFilePath +product[i].DefaultImage :ViewBag.BaseFilePath +"/UploadedFiles/Products/no_image.gif")" alt="@product[i+1].Name" title="@product[i+1].Name" class="img-fluid center-block first-img" /></a>
                                             <!-- Smartshop Images Start -->
-                                            <a href="@Url.Action("ProductDetails","Products", new { sku= product[i+1].SKUCode })"><img src="@(!string.IsNullOrEmpty(product[i].HoverImage)?ViewBag.BaseFilePath +product[i].HoverImage :ViewBag.BaseFilePath +"/UploadedFiles/Products/no_image.gif")" alt="@product[i+1].Name" title="@product[i+1].Name" class="img-responsive second-img" /></a>
+                                            <a href="@Url.Action("ProductDetails","Products", new { sku= product[i+1].SKUCode })"><img src="@(!string.IsNullOrEmpty(product[i].HoverImage)?ViewBag.BaseFilePath +product[i].HoverImage :ViewBag.BaseFilePath +"/UploadedFiles/Products/no_image.gif")" alt="@product[i+1].Name" title="@product[i+1].Name" class="img-fluid second-img" /></a>
                                             <!-- Smartshop Images End -->
                                             <div class="topbutton">
                                                 <button type="button" data-toggle="tooltip" title="Add to Wish List">
