--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_TopCategoryPartial.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_TopCategoryPartial.cshtml
@@ -27,10 +27,9 @@
         </div>
 
         <!--category-tab-->
-        <div class="row">
-            <div class="cat-tab">
-                <div class="col-lg-2 col-md-3 home-cat" id="cat_tab">
-                    <ul class="nav nav-tabs">
+            <div class="row cat-tab">
+                <div class="col-xl-2 col-lg-3 home-cat" id="cat_tab">
+                    <ul class="nav nav-tabs d-block">
                         @if (Model != null)
                         {
                             @Html.Hidden("ProductGroupIds", Model.FirstOrDefault()?.ProductGroupId)
@@ -49,5 +48,4 @@
                     </div>
                 </div>
             </div>
-        </div>
     </div>
