--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_DeliveryInfoPartial.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_DeliveryInfoPartial.cshtml
@@ -1,7 +1,7 @@
 ﻿<div>
     <div class="deliveryinfo">
-            <div class=" deliveryinfo-row row ml-0 mr-0 no-f-wrap">
-                <ul class="col-md-3 col-lg-3 col-3 list-inline p-0 d-flex">
+            <div class=" deliveryinfo-row row">
+                <ul class="col-md-3 col-lg-3 col-sm-3 col-12 list-inline p-0 d-flex">
                     <li class="del1 pl-0">
                         <svg class="ml-0" width="36px" height="36px">
                             <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="/Areas/Shop/Content/app/img/icons/icons.svg#gift"></use>
@@ -12,7 +12,7 @@
                         <p>give a perfect gift</p>
                     </li>
                 </ul>
-                <ul class="col-md-3 col-lg-3 col-3 list-inline p-0 d-flex">
+                <ul class="col-md-3 col-lg-3 col-sm-3 col-12 list-inline p-0 d-flex">
                     <li class="del4">
                         <svg width="36px" height="36px">
                             <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="/Areas/Shop/Content/app/img/icons/icons.svg#pay"></use>
@@ -23,7 +23,7 @@
                         <p>100% secure payment</p>
                     </li>
                 </ul>
-                <ul class=" col-md-3 col-lg-3 col-3 list-inline t-center p-0 d-flex justify-content-center">
+                <ul class=" col-md-3 col-lg-3 col-sm-3 col-12 list-inline text-center p-0 d-flex">
                     <li class="del2 ">
                         <svg width="36px" height="36px">
                             <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="/Areas/Shop/Content/app/img/icons/icons.svg#support"></use>
@@ -34,7 +34,7 @@
                         <p>online support 24/7</p>
                     </li>
                 </ul>
-                <ul class=" col-md-3 col-lg-3 col-3 t-right list-inline p-0 d-flex justify-content-end">
+                <ul class=" col-md-3 col-lg-3 col-sm-3 col-12 text-right list-inline p-0 d-flex">
                     <li class="del3">
                         <svg width="36px" height="36px">
                             <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="/Areas/Shop/Content/app/img/icons/icons.svg#ship"></use>
