stock movement changes added and bulk movement functionality also added Imported from Changeset 2459

--- a/WMS/Views/InventoryStocks/Index.cshtml
+++ b/WMS/Views/InventoryStocks/Index.cshtml
@@ -70,4 +70,8 @@
     {
         @Html.ActionLink("Move Stock", "MoveStock", null, new { @class = "btn btn-primary Caction" })
     }
+    @if (WMS.Helpers.LayoutHelpers.ActivityValidator("InventoryStocks", "MoveStock"))
+    {
+        @Html.ActionLink("Move Bulk Stock", "MoveStock", null, new { @class = "btn btn-primary" })
+    }
 </div>
