--- a/WarehouseEcommerce/Areas/Shop/Views/Products/KitProductDetail.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Products/KitProductDetail.cshtml
@@ -5,7 +5,7 @@
 }
 <div id="product-product" class="container custom-max-width m-auto kit-product">
     <div class="row">
-        <div id="content" class="col-md-12 col-sm-12">
+        <div id="content" class="col-lg-12 col-md-12">
             <ul class="breadcrumb">
                 <li><a href="/shop">Home</a></li>
                 @if (!string.IsNullOrEmpty(Model?.TenantDepartment?.DepartmentName))
@@ -30,47 +30,44 @@
             <div>
                 <h2 style="padding: 0px 15px;">@Model.Name</h2>
                 <div class="row product-bg">
-                    <div class="sticky col-sm-6 col-md-6">
+                    <div class="sticky description-row col-lg-6 col-md-6">
                         <ul class="thumbnails">
                             <li>
                                 <a class="thumbnail" href="@(!string.IsNullOrEmpty(Model.DefaultImage)?ViewBag.BaseFilePath + Model.DefaultImage : ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.gif")" title="#">
-                                    <img data-zoom-image="@(!string.IsNullOrEmpty(Model.DefaultImage)?ViewBag.BaseFilePath + Model.DefaultImage:ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.gif")" src="@(!string.IsNullOrEmpty(Model.DefaultImage)?ViewBag.BaseFilePath + Model.DefaultImage:ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.gif")" id="zoom_03" class="img-responsive center-block" alt="image">
-                                    @*<img src="~/Areas/Shop/Content/app/img/product/Canon-EOS-1300D-DSLR-Camera-Body-with-Single-Lens-1.jpg" id="zoom_03" class="img-responsive center-block" alt="image">*@
+                                    @*<img data-zoom-image="@(!string.IsNullOrEmpty(Model.DefaultImage)?ViewBag.BaseFilePath + Model.DefaultImage:ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.gif")" src="@(!string.IsNullOrEmpty(Model.DefaultImage)?ViewBag.BaseFilePath + Model.DefaultImage:ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.gif")" id="zoom_03" class="img-fluid center-block" alt="image">*@
+                                    <img src="~/Areas/Shop/Content/app/img/product/Canon-EOS-1300D-DSLR-Camera-Body-with-Single-Lens-1.jpg" id="zoom_03" class="img-fluid center-block" alt="image">
                                 </a>
                             </li>
 
                             <li>
-                                <div class="row">
                                     <div id="gallery_01" class="owl-carousel">
                                         @foreach (var item in Model.ProductFiles)
                                         {
                                             <div class="col-xs-12">
                                                 <a data-zoom-image="@(!string.IsNullOrEmpty(item.FilePath)?ViewBag.BaseFilePath + item.FilePath : ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.gif")" data-image="@(!string.IsNullOrEmpty(item.FilePath) ? ViewBag.BaseFilePath + item.FilePath : ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.gif")" href="@(!string.IsNullOrEmpty(item.FilePath)?ViewBag.BaseFilePath + item.FilePath:ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.gif")">
-                                                    <img src="@(!string.IsNullOrEmpty(item.FilePath)?ViewBag.BaseFilePath + item.FilePath : ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.gif")" class="img-responsive center-block" alt="additional image">
-                                                    @*<img src="~/Areas/Shop/Content/app/img/product/Canon-EOS-1300D-DSLR-Camera-Body-with-Single-Lens-1.jpg" id="zoom_03" class="img-responsive center-block" alt="image">*@
+                                                    @*<img src="@(!string.IsNullOrEmpty(item.FilePath)?ViewBag.BaseFilePath + item.FilePath : ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.gif")" class="img-fluid center-block" alt="additional image">*@
+                                                    <img src="~/Areas/Shop/Content/app/img/product/Canon-EOS-1300D-DSLR-Camera-Body-with-Single-Lens-1.jpg" id="zoom_03" class="img-fluid center-block" alt="image">
                                                 </a>
                                             </div>
                                         }
 
                                     </div>
-                                </div>
                             </li>
                         </ul>
                         <!-- product Reviews Start-->
                         <div class="product-tab">
-                            <ul class="nav nav-tabs">
-                                <li class="active"><a href="#tab-description" data-toggle="tab">Description</a></li>
-                                <li><a href="#tab-review" data-toggle="tab">Reviews (0)</a></li>
+                            <ul class="nav nav-tabs responsive" role="tablist">
+                                <li class="nav-item"><a class="nav-link active" href="#tab-description" data-toggle="tab" role="tab">Description</a></li>
+                                <li class="nav-item"><a class="nav-link"  href="#tab-review" data-toggle="tab" role="tab">Reviews (0)</a></li>
                             </ul>
                             <div class="tab-content">
-                                <div class="tab-pane active" id="tab-description">
+                                <div class="tab-pane active" role="tabpanel" id="tab-description">
                                     <p>
                                         @Model.Description
 
                                     </p>
-
                                 </div>
-                                <div class="tab-pane" id="tab-review">
+                                <div class="tab-pane" id="tab-review" role="tabpanel">
                                     <form class="form-horizontal" id="form-review">
                                         <div id="review"></div>
                                         <h2 class="heading co-heading">Write a review</h2>
@@ -115,74 +112,75 @@
                         <!-- product Reviews End-->
                     </div>
 
-                    <div class="col-sm-6 col-md-6 pro-content">
-                        <div class="tab-group rates-page-tabs">
-                            <!-- Nav tabs -->
+                    <div class="col-lg-6 col-md-6 pro-content">
+                         
                             <ul class="nav nav-tabs responsive" role="tablist">
+                                <li class="nav-item">
+                                    <a class="nav-link active" data-toggle="tab" href="#home" role="tab">Options</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" data-toggle="tab" href="#profile" role="tab">Extended Warranty</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" data-toggle="tab" href="#messages" role="tab">Accessories</a>
+                                </li>
+                            </ul><!-- Tab panes -->
+                            <div class="tab-content kit-tabs-content responsive">
+                                <div class="tab-pane active" id="home" role="tabpanel">
+                                            <div class="cartitem-details">
+                                                <div class="cartitem-imgtext ">
+                                                    <div class="cartitem-text">
+                                                        <p><a href=""><strong>@Model.Name</strong></a></p>
+                                                        <p><b style="color: #007600 !important;">@(Model.InventoryStocks.Count == 0 ? "Not Avaialable" : "In Stock")</b></p>
+                                                        <p><b>Brands:</b> <span>@(Model.ProductManufacturer == null ? "" : Model.ProductManufacturer.Name)</span></p>
+                                                        <p><b>SKU Code:</b> <span>@Model.SKUCode</span></p>
+                                                        <p><b>Product Code::</b> <span>@Model.BarCode</span></p>
+                                                        <p><b>Size:</b> <span>M</span></p>
 
-                                <li role="presentation" class="active"><a href="#loan-rates" aria-controls="loan-rates" role="tab" data-toggle="tab">Options</a></li>
-                                <li role="presentation"><a href="#mortgage-rates" aria-controls="mortgage-rates" role="tab" data-toggle="tab">Extended Warranty</a></li>
-                                <li role="presentation"><a href="#checking-savings-rates" aria-controls="checking-savings-rates" role="tab" data-toggle="tab">Accessories</a></li>
-                            </ul>
+                                                        <p>
+                                                            <div class=" required ">
+                                                                <label class="control-label" for="input-option226">Select Available Option</label>
+                                                                <select name="option[226]" id="input-option226" class="form-control">
+                                                                    <option value=""> --- Please Select --- </option>
+                                                                    <option value="black">
+                                                                        Black
+                                                                    </option>
+                                                                </select>
+                                                            </div>
+                                                        </p>
+                                                        <p class="cart-quantity">
+                                                            <b>Quantity:</b> <input type="number" min="0" placeholder="Qty" onchange="" value="1" />
+                                                            <a href="javascript:;" class="remove-btn cart-del" onclick=""><i class="fa fa-trash-o" aria-hidden="true"></i> Delete</a>
+                                                        </p>
 
-                            <!-- Tab panes -->
-                            <div class="tab-content kit-tab-content responsive">
-                                <div role="tabpanel" class="tab-pane active" id="loan-rates">
-                                    <div class="cartitem-details">
-                                        <div class="cartitem-imgtext ">
-                                            <div class="cartitem-text">
-                                                <p><a href=""><strong>@Model.Name</strong></a></p>
-                                                <p><b style="color: #007600 !important;">@(Model.InventoryStocks.Count == 0 ? "Not Avaialable" : "In Stock")</b></p>
-                                                <p><b>Brands:</b> <span>@(Model.ProductManufacturer == null ? "" : Model.ProductManufacturer.Name)</span></p>
-                                                <p><b>SKU Code:</b> <span>@Model.SKUCode</span></p>
-                                                <p><b>Product Code::</b> <span>@Model.BarCode</span></p>
-                                                <p><b>Size:</b> <span>M</span></p>
-
-                                                <p>
-                                                    <div class=" required ">
-                                                        <label class="control-label" for="input-option226">Select Available Option</label>
-                                                        <select name="option[226]" id="input-option226" class="form-control">
-                                                            <option value=""> --- Please Select --- </option>
-                                                            <option value="black">
-                                                                Black
-                                                            </option>
-                                                        </select>
                                                     </div>
-                                                </p>
-                                                <p class="cart-quantity">
-                                                    <b>Quantity:</b> <input type="number" min="0" placeholder="Qty" onchange="" value="1" />
-                                                    <a href="javascript:;" class="remove-btn cart-del" onclick=""><i class="fa fa-trash-o" aria-hidden="true"></i> Delete</a>
-                                                </p>
+                                                </div>
+                                                <div class="cartitem-price">
+                                                    <p><span>Price:</span><b>@ViewBag.CurrencySymbol @Model.SellPrice</b></p>
+                                                    <p><span>Total:</span><b>@ViewBag.CurrencySymbol @Model.SellPrice</b></p>
+                                                    <div class="button-submit">
+                                                        @if (@Model.SellPrice > 0 && @Model.SellPrice.HasValue && @Model.PercentMargin > 0)
+                                                        {
+                                                            <button type="Submit" name="submitNewsletter" class="btn btn-block move-to-cart-btn" id="button-cart" onclick="AddToCart(@Model.ProductId)">Add to Basket</button>
+                                                        }
+                                                        else
+                                                        {
+                                                            <button type="button" class=" btn btn-block disabled-btn" disabled><span>Add to Basket</span></button>
+                                                        }
 
+                                                    </div>
+                                                </div>
                                             </div>
-                                        </div>
-                                        <div class="cartitem-price">
-                                            <p><span>Price:</span><b>@ViewBag.CurrencySymbol @Model.SellPrice</b></p>
-                                            <p><span>Total:</span><b>@ViewBag.CurrencySymbol @Model.SellPrice</b></p>
-                                            <div class="button-submit">
-                                                @if (@Model.SellPrice > 0 && @Model.SellPrice.HasValue && @Model.PercentMargin > 0)
-                                                {
-                                                    <button type="Submit" name="submitNewsletter" class="btn btn-block move-to-cart-btn" id="button-cart" onclick="AddToCart(@Model.ProductId)">Add to Basket</button>
-                                                }
-                                                else
-                                                {
-                                                    <button type="button" class=" btn btn-block disabled-btn" disabled><span>Add to Basket</span></button>
-                                                }
-
-                                            </div>
-                                        </div>
-                                    </div>
                                 </div>
-                                <div role="tabpanel" class="tab-pane" id="mortgage-rates">
+                                <div class="tab-pane" id="profile" role="tabpanel">
                                     <h3>Extended Warranty</h3>
-                                    <p>Paste something here...</p>
+                                    <p>Extended warranty coming soon</p>
                                 </div>
-                                <div role="tabpanel" class="tab-pane" id="checking-savings-rates">
+                                <div class="tab-pane" id="messages" role="tabpanel">
                                     <h3>Accessories</h3>
-                                    <p>Paste something here...</p>
+                                    <p>Accessories coming soon</p>
                                 </div>
                             </div>
-                        </div>
                     </div>
                 </div>
             </div>
