--- a/WarehouseEcommerce/Areas/Shop/Views/User/Login.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/User/Login.cshtml
@@ -35,12 +35,12 @@
             </div>
         </div>
     </div>
-    <div id="page-preloader" class="visible">
+    @*<div id="page-preloader" class="visible">
         <div class="spinner">
             <div class="double-bounce1"></div>
             <div class="double-bounce2"></div>
         </div>
-    </div>
+    </div>*@
 
 
     <div class="row login-row">
@@ -137,7 +137,7 @@
     </a>
 
     <script src="~/Areas/Shop/Scripts/jquery-3.4.1.js"></script>
-    <script src="~/Areas/Shop/Scripts/bootstrap.min.js"></script>
+    <script src="~/Scripts/bootstrap.min.js"></script>
     <script src="~/Areas/Shop/Content/plugins/elevatezoom/jquery.elevateZoom-3.0.8.min.js"></script>
     <!-- blog image zoom -->
     <script src="~/Areas/Shop/Content/plugins/lightbox2/js/lightbox.min.js"></script>
