--- a/WarehouseEcommerce/Areas/Shop/Views/User/Create.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/User/Create.cshtml
@@ -16,13 +16,7 @@
     @Styles.Render("~/Content/app/css/styles")
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 
-    @*<link href="/Content/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen" />*@
-    <link href="~/Areas/Shop/Content/plugins/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
-    <link href="~/Areas/Shop/Content/plugins/swiper/css/swiper.min.css" type="text/css" rel="stylesheet" media="screen" />
-    <link href="~/Areas/Shop/Content/plugins/owl.carousel/owl.carousel.css" type="text/css" rel="stylesheet" media="screen" />
-    <link href="~/Areas/Shop/Content/plugins/owl.carousel/owl.theme.css" type="text/css" rel="stylesheet" media="screen" />
-    <link href="~/Areas/Shop/Content/plugins/magnific-popup/dist/magnific-popup.css" type="text/css" rel="stylesheet" media="screen" />
-    @*<link href="/Content/app/css/app.css" rel="stylesheet">*@
+    <link rel="stylesheet" href="~/Content/font-awesome.min.css">
     @Scripts.Render("~/bundles/modernizr")
     <script type="text/javascript"> var basePath = '@ViewBag.BasePath';</script>
 </head>
@@ -35,18 +29,18 @@
             </div>
         </div>
     </div>
- 
-    <div id="page-preloader" class="visible">
-        <div class="spinner">
-            <div class="double-bounce1"></div>
-            <div class="double-bounce2"></div>
-        </div>
-    </div>
+
+    @*<div id="page-preloader" class="visible">
+            <div class="spinner">
+                <div class="double-bounce1"></div>
+                <div class="double-bounce2"></div>
+            </div>
+        </div>*@
 
     <div class="row login-row">
 
         <div class="register-div">
-            <div class="mb-5">
+            <div class="">
                 <a class="" href="#">Help</a> |
                 <a class="" href="@Url.Action("Login","User", new {PlaceOrder=(bool?)ViewBag.PlaceOrders})">Login</a>
             </div>
@@ -55,9 +49,9 @@
             </ul>
         </div>
 
-        <div class="col-md-6 signup-col">
+        <div class="col-lg-6 signup-col  ">
             <div class="row">
-                <div class="col-md-12 text-center">
+                <div class="col-lg-12 text-center  ">
                     <div class="login-logo">
                         <a href="@Url.Action("Index","Home")">
                             <img src="~/Areas/Shop/Content/app/img/logo.png" title="SmartShop Multistore" alt="SmartShop Multistore" class="img-responsive ex-center">
@@ -65,115 +59,117 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
-                @using (Html.BeginForm("Create", "User", FormMethod.Post, new { @class = "formNewLestter", id = "formNewLestter" }))
-                {
-                    @Html.HiddenFor(model => model.PlaceOrder, (bool?)ViewBag.Placeorder)
-                    <div class="col-md-6 col-sm-6  signup-single-side">
-                        <div class="webi-newsletter  webi-newsletter leftprobg text-center" id="newsletter_5b2631bae1cb9" data-mode="default">
 
-                            @Html.AntiForgeryToken()
+            @using (Html.BeginForm("Create", "User", FormMethod.Post, new { @class = "formNewLestter", id = "formNewLestter" }))
+            {
+        <div class="row">
+            @Html.HiddenFor(model => model.PlaceOrder, (bool?)ViewBag.Placeorder)
+            <div class="col-lg-6 col-md-6  signup-single-side  ">
+                <div class="webi-newsletter  webi-newsletter leftprobg text-center" id="newsletter_5b2631bae1cb9" data-mode="default">
 
-                            <div class="remove-inner">
-                                <h3>USER DETAIL</h3>
-                                <hr>
-                                <div class="form-group">
+                    @Html.AntiForgeryToken()
 
-                                    @Html.EditorFor(model => model.FirstName, new { htmlattributes = new { @class = "form-control input-md inputNew", @placeholder = "Enter First Name" } })
-                                    @Html.ValidationMessageFor(model => model.FirstName)
-                                    @Html.EditorFor(model => model.LastName, new { htmlattributes = new { @class = "form-control input-md inputNew", @placeholder = "Enter Last Name" } })
-                                    @Html.ValidationMessageFor(model => model.LastName)
-
-                                    @Html.EditorFor(model => model.ContactNumber, new { htmlattributes = new { @class = "form-control input-md inputNew",@type="number", @placeholder = "Enter Contact Number" } })
-                                    @Html.ValidationMessageFor(model => model.ContactNumber)
-                                    @Html.EditorFor(model => model.Email, new { htmlattributes = new { @class = "form-control input-md inputNew", @placeholder = "Enter Email" } })
-                                    @Html.ValidationMessageFor(model => model.Email)
-
-                                    @Html.PasswordFor(model => model.Password, new { @class = "form-control input-md inputNew", @placeholder = "Enter Password" })
-                                    @Html.ValidationMessageFor(model => model.Password)
-                                    @Html.PasswordFor(model => model.ConfirmPassword, new { @class = "form-control input-md inputNew", @placeholder = " Re Enter Password" })
-                                    @Html.ValidationMessageFor(model => model.Password)
-
-
-                                </div>
-
-                                @*<div class="seperator position-relative">
-                            <span class="d-inline-block">OR</span>
-                        </div>
-                        <h3>Sign up with Social Media</h3>
+                    <div class="remove-inner">
+                        <h3>USER DETAIL</h3>
                         <hr>
-                        <div class="login-google">
-                            <button class="btn btn-primary btn-fb">
-                                <i class="fa fa-facebook"></i>CONNECT WITH FACEBOOK
-                            </button>
-                            <button class="btn btn-primary btn-goggle">
-                                <i class="fa fa-google-plus" aria-hidden="true"></i>CONNECT WITH GOOGLE
-                            </button>
-                        </div>*@
-                            </div>
+                        <div class="form-group">
+
+                            @Html.EditorFor(model => model.FirstName, new { htmlattributes = new { @class = "form-control input-md inputNew", @placeholder = "Enter First Name" } })
+                            @Html.ValidationMessageFor(model => model.FirstName)
+                            @Html.EditorFor(model => model.LastName, new { htmlattributes = new { @class = "form-control input-md inputNew", @placeholder = "Enter Last Name" } })
+                            @Html.ValidationMessageFor(model => model.LastName)
+
+                            @Html.EditorFor(model => model.ContactNumber, new { htmlattributes = new { @class = "form-control input-md inputNew", @type = "number", @placeholder = "Enter Contact Number" } })
+                            @Html.ValidationMessageFor(model => model.ContactNumber)
+                            @Html.EditorFor(model => model.Email, new { htmlattributes = new { @class = "form-control input-md inputNew", @placeholder = "Enter Email" } })
+                            @Html.ValidationMessageFor(model => model.Email)
+
+                            @Html.PasswordFor(model => model.Password, new { @class = "form-control input-md inputNew", @placeholder = "Enter Password" })
+                            @Html.ValidationMessageFor(model => model.Password)
+                            @Html.PasswordFor(model => model.ConfirmPassword, new { @class = "form-control input-md inputNew", @placeholder = " Re Enter Password" })
+                            @Html.ValidationMessageFor(model => model.Password)
 
 
                         </div>
+
+                        @*<div class="seperator position-relative">
+                        <span class="d-inline-block">OR</span>
                     </div>
-                    <div class="col-md-6 col-sm-6 signup-single-side">
-                        <div class="webi-newsletter  webi-newsletter leftprobg text-center" id="newsletter_5b2631bae1cb9" data-mode="default">
-
-
-
-                            <div class="remove-inner">
-                                <h3>COMPANY DETAIL</h3>
-                                <hr>
-                                <div class="form-group">
-
-                                    @Html.EditorFor(model => model.CompanyName, new { htmlattributes = new { @class = "form-control input-md inputNew", @placeholder = "Enter Company" } })
-                                    @Html.ValidationMessageFor(model => model.ContactNumber)
-                                    @Html.EditorFor(model => model.VATNumber, new { htmlattributes = new { @class = "form-control input-md inputNew", @placeholder = "Enter Vat Number" } })
-                                    @Html.ValidationMessageFor(model => model.ContactNumber)
-                                    @Html.EditorFor(model => model.RegNumber, new { htmlattributes = new { @class = "form-control input-md inputNew", @placeholder = "Enter Company Reg No." } })
-                                    @Html.ValidationMessageFor(model => model.ContactNumber)
-
-                                </div>
-
-                                <div data-v-5f85c551="" class="privacy-policy">
-                                    <div class="checkbox-div-signup">
-                                        <input type="checkbox" class="rectangle ">
-                                        <p  class="">I agree to <a href="/privacy-policy">terms & conditions,</a> and <a href="/privacy-policy">privacy policy.</a></p>
-                                    </div>
-                                </div>
-                                <div class="button-submit">
-                                    <button type="submit" name="submitNewsletter" class="btn btn-block btn-primary signup-button">Create an account</button>
-                                </div>
-                                <div class="signup-text-div mt-30">
-                                    <p class="signup-text">Have an account ?</p>
-                                    <a href="/Shop/User/Login">Login</a>
-                                </div>
-                                @*<div class="seperator position-relative">
-            <span class="d-inline-block">OR</span>
-        </div>
-        <h3>Sign up with Social Media</h3>
-        <hr>
-        <div class="login-google">
-            <button class="btn btn-primary btn-fb">
-                <i class="fa fa-facebook"></i>CONNECT WITH FACEBOOK
-            </button>
-            <button class="btn btn-primary btn-goggle">
-                <i class="fa fa-google-plus" aria-hidden="true"></i>CONNECT WITH GOOGLE
-            </button>
-        </div>*@
-                            </div>
-
-                        </div>
+                    <h3>Sign up with Social Media</h3>
+                    <hr>
+                    <div class="login-google">
+                        <button class="btn btn-primary btn-fb">
+                            <i class="fa fa-facebook"></i>CONNECT WITH FACEBOOK
+                        </button>
+                        <button class="btn btn-primary btn-goggle">
+                            <i class="fa fa-google-plus" aria-hidden="true"></i>CONNECT WITH GOOGLE
+                        </button>
+                    </div>*@
                     </div>
-                }
+
+
+                </div>
             </div>
+            <div class="col-lg-6 col-md-6 signup-single-side  ">
+                <div class="webi-newsletter  webi-newsletter leftprobg text-center" id="newsletter_5b2631bae1cb9" data-mode="default">
 
+
+
+                    <div class="remove-inner">
+                        <h3>COMPANY DETAIL</h3>
+                        <hr>
+                        <div class="form-group">
+                                    
+                            @Html.EditorFor(model => model.CompanyName, new { htmlattributes = new { @class = "form-control input-md inputNew", @placeholder = "Enter Company" } })
+                            @Html.ValidationMessageFor(model => model.ContactNumber)
+                            @Html.EditorFor(model => model.VATNumber, new { htmlattributes = new { @class = "form-control input-md inputNew", @placeholder = "Enter Vat Number" } })
+                            @Html.ValidationMessageFor(model => model.ContactNumber)
+                            @Html.EditorFor(model => model.RegNumber, new { htmlattributes = new { @class = "form-control input-md inputNew", @placeholder = "Enter Company Reg No." } })
+                            @Html.ValidationMessageFor(model => model.ContactNumber)
+
+                        </div>
+
+                        <div data-v-5f85c551="" class="privacy-policy">
+                            <div class="checkbox-div-signup">
+                                <input type="checkbox" class="rectangle ">
+                                <p class="">I agree to <a href="/privacy-policy">terms & conditions,</a> and <a href="/privacy-policy">privacy policy.</a></p>
+                            </div>
+                        </div>
+                        <div class="button-submit">
+                            <button type="submit" name="submitNewsletter" class="btn btn-block btn-primary signup-button">Create an account</button>
+                        </div>
+                        <div class="signup-text-div mt-30">
+                            <p class="signup-text">Have an account ?</p>
+                            <a href="/Shop/User/Login">Login</a>
+                        </div>
+                        @*<div class="seperator position-relative">
+                        <span class="d-inline-block">OR</span>
+                    </div>
+                    <h3>Sign up with Social Media</h3>
+                    <hr>
+                    <div class="login-google">
+                        <button class="btn btn-primary btn-fb">
+                            <i class="fa fa-facebook"></i>CONNECT WITH FACEBOOK
+                        </button>
+                        <button class="btn btn-primary btn-goggle">
+                            <i class="fa fa-google-plus" aria-hidden="true"></i>CONNECT WITH GOOGLE
+                        </button>
+                    </div>*@
+                    </div>
+
+                </div>
+            </div>
         </div>
+                    }
+               
+
+            </div>
     </div>
 
 
     <footer>
         <div class="row footer-row text-center">
-            <div class="col-md-12">
+            <div class="col-lg-12  ">
                 <div class="ccopy">Powered By <a href="/">GaneData</a> &copy; 2018</div>
             </div>
         </div>
@@ -182,7 +178,7 @@
         <span id="slidetop"></span>
     </a>
     <script src="~/Areas/Shop/Scripts/jquery-3.4.1.js"></script>
-    <script src="~/Areas/Shop/Scripts/bootstrap.min.js"></script>
+    <script src="~/Scripts/bootstrap.min.js"></script>
     <script src="~/Areas/Shop/Content/plugins/elevatezoom/jquery.elevateZoom-3.0.8.min.js"></script>
     <!-- blog image zoom -->
     <script src="~/Areas/Shop/Content/plugins/lightbox2/js/lightbox.min.js"></script>
